fixed text alignment

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,6 +22,10 @@
   .navbarItemText {
     color: #f0f0f0
   }
+
+  .homeHeaderText {
+    text-align: left;
+  }
 }
 
 
@@ -32,6 +36,10 @@
 
   .navbarItemText {
     color: #565c65;
+  }
+
+  .homeHeaderText {
+    text-align: center;
   }
 }
 
